# reframe

./: .gitignore  AGENT_BRIEF.md  CHANGELOG.md  LICENSE  README.md  VISION.md  pyproject.toml  requirements.txt
reframe/: __init__.py  cli.py  crop.py  detect.py  pipeline.py  scenes.py  smooth.py
